sasapokimica/src/objects/Production__c.object
<CustomObject>
    <description>Production can be movie, tv show or games in our app</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the production. Provides a high level overview</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Budget__c</fullName>
        <label>Estimated Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fun_Facts__c</fullName>
        <label>Fun Facts</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IMDb_URL__c</fullName>
        <description>This field contains the web address on IMDb for the Production</description>
        <label>IMDb URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Number_Of_Episodes__c</fullName>
        <label>Number Of Episodes</label>
        <summaryForeignKey>Episode__c.TV_Show__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year that the Production was initially released</description>
        <inlineHelpText>Year of the production</inlineHelpText>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Production</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Production Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productions</pluralLabel>
    <recordTypes>
        <fullName>Games</fullName>
        <active>true</active>
        <description>Games</description>
        <label>Games</label>
    </recordTypes>
    <recordTypes>
        <fullName>Movie</fullName>
        <active>true</active>
        <description>Movies</description>
        <label>Movie</label>
    </recordTypes>
    <recordTypes>
        <fullName>TV_Show</fullName>
        <active>true</active>
        <description>TV Show</description>
        <label>TV Show</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>